--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,9 +9,9 @@ BBFILE_PATTERN_azure-device-update := "^${LAYERDIR}/"
 
 # Pri 16 ensures that our recipes are applied over other layers.
 # This is applicable where we are using appends files to adjust other recipes.
-BBFILE_PRIORITY_azure-device-update = "16"
-LAYERSERIES_COMPAT_azure-device-update  = "warrior"
-LAYERDEPENDS_azure-device-update = "meta-fus-updater"
+BBFILE_PRIORITY_azure-device-update = "11"
+LAYERDEPENDS_azure-device-update = "fus-updater"
+LAYERSERIES_COMPAT_azure-device-update  = "zeus"
 
 # Layer-specific configuration variables.
 # These values can/will be overriden by environment variables
