Add fus update handler
- Set update handler for fus-device-update.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -23,18 +23,14 @@ LAYERSERIES_COMPAT_azure-device-update  = "zeus"
 # For the ADU reference image this is set to a new value every build.
 ADU_SOFTWARE_VERSION ?= "0.0.0.1"
 
-# HW_REV will be written to a file that is used by swupdate
-# to determine hardware compatibility.
-HW_REV ?= "1.0"
 # MANUFACTURER will be written to file that is read by the ADU Client.
 # This value will be reported through the Device Information PnP interface by the ADU Client.
 # This value is used as the namespace of the content and for compatibiltiy checks.
-MANUFACTURER ?= "Contoso"
+MANUFACTURER ?= "FUS"
 # MODEL will also be written to file that is read by the ADU Client.
 # This value will be reported through the Device Information PnP interface by the ADU Client.
 # This value is used in the name of content and for compatibiltiy checks.
-MODEL ?= "ADU Raspberry Pi Example"
-
+MODEL ?= "IMX8MM"
 # ADUC_PRIVATE_KEY is the build host path to the .pem private key file to use to sign the image.
 # ADUC_PRIVATE_KEY_PASSWORD is the build host path to the .pass password file for the private key.
 
