Update in relation to raw template (incomplete)

--- a/recipes-azure-device-update/adu-log-dir/files/adu-logs.conf
+++ b/recipes-azure-device-update/adu-log-dir/files/adu-logs.conf
@@ -8,4 +8,4 @@
 # 10d - Cleanup this directory every 10 days.
 #
 # mode path permissions owner group duration
-q /adu/logs 1777 adu adu 10d
+d       /tmp/adu          0770    adu     adu    -   -
