conf: Extend list of compatible layer to use kirkstone
- Extend list of compatible layer to use kirkstone
- Add fsup-provisioning class

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_PATTERN_azure-device-update := "^${LAYERDIR}/"
 # This is applicable where we are using appends files to adjust other recipes.
 BBFILE_PRIORITY_azure-device-update = "11"
 LAYERDEPENDS_azure-device-update = "fus-updater"
-LAYERSERIES_COMPAT_azure-device-update  = "zeus"
+LAYERSERIES_COMPAT_azure-device-update  = "zeus kirkstone"
 
 # Layer-specific configuration variables.
 # These values can/will be overriden by environment variables
@@ -30,6 +30,8 @@ MODEL ?= "IMX8MM"
 
 BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.%s' % (layer, ext) \
                for layer in '${BBFILE_COLLECTIONS}'.split() for ext in ['bb', 'bbappend'])}"
+
+INHERIT += " fsup-provisioning"
 
 # Image level user/group configuration.
 # Inherit extrausers to make the setting of EXTRA_USERS_PARAMS effective.
