--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -4,45 +4,11 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb \
             ${LAYERDIR}/recipes*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "azure-device-update"
-BBFILE_PATTERN_azure-device-update := "^${LAYERDIR}/"
+BBFILE_COLLECTIONS += "fus-updater-azure"
+BBFILE_PATTERN_fus-updater-azure := "^${LAYERDIR}/"
 
 # Pri 16 ensures that our recipes are applied over other layers.
 # This is applicable where we are using appends files to adjust other recipes.
-BBFILE_PRIORITY_azure-device-update = "11"
-LAYERDEPENDS_azure-device-update = "fus-updater"
-LAYERSERIES_COMPAT_azure-device-update  = "zeus kirkstone"
-
-# Layer-specific configuration variables.
-# These values can/will be overriden by environment variables
-# if those variables are added to the BB_ENV_EXTRAWHITE environment variable.
-
-# MANUFACTURER will be written to file that is read by the ADU Client.
-# This value will be reported through the Device Information PnP interface by the ADU Client.
-# This value is used as the namespace of the content and for compatibiltiy checks.
-MANUFACTURER ?= "FUS"
-# MODEL will also be written to file that is read by the ADU Client.
-# This value will be reported through the Device Information PnP interface by the ADU Client.
-# This value is used in the name of content and for compatibiltiy checks.
-MODEL ?= "IMX8MM"
-# ADUC_PRIVATE_KEY is the build host path to the .pem private key file to use to sign the image.
-# ADUC_PRIVATE_KEY_PASSWORD is the build host path to the .pass password file for the private key.
-
-BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.%s' % (layer, ext) \
-               for layer in '${BBFILE_COLLECTIONS}'.split() for ext in ['bb', 'bbappend'])}"
-
-INHERIT += " fsup-provisioning"
-
-# Image level user/group configuration.
-# Inherit extrausers to make the setting of EXTRA_USERS_PARAMS effective.
-INHERIT += "extrausers"
-
-# User / group settings
-# The settings are separated by the ; character.
-# Each setting is actually a command. The supported commands are useradd,
-# groupadd, userdel, groupdel, usermod and groupmod.
-EXTRA_USERS_PARAMS = "groupadd --gid 800 adu ; \
- groupadd -r --gid 801 do ; \
- useradd --uid 800 -p '' -r -g adu --no-create-home --shell /bin/false adu ; \
- useradd --uid 801 -p '' -r -g do -G adu --no-create-home --shell /bin/false do ; \
- "
+BBFILE_PRIORITY_fus-updater-azure = "11"
+LAYERDEPENDS_fus-updater-azure = "fus-updater"
+LAYERSERIES_COMPAT_fus-updater-azure  = "zeus kirkstone"
