conf: Improve compat environment
Remove unsupported yocto versions from
LAYERSERIES_COMPAT_... environment.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,4 +11,4 @@ BBFILE_PATTERN_fus-updater-azure := "^${LAYERDIR}/"
 # This is applicable where we are using appends files to adjust other recipes.
 BBFILE_PRIORITY_fus-updater-azure = "11"
 LAYERDEPENDS_fus-updater-azure = "fus-updater"
-LAYERSERIES_COMPAT_fus-updater-azure  = "zeus kirkstone"
+LAYERSERIES_COMPAT_fus-updater-azure  = "kirkstone"
